[package]
name = "veld-chat-pc_client"
version = "0.1.0"
authors = ["65502847 <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
