[package]
name = "veld-chat-pc_client"
version = "0.1.3"
authors = ["65502847 <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
json = "0.12.4"
url = "2.2.0"
tungstenite = { version = "0.11.1", features = ["tls"] }
