[package]
name = "veld-chat-pc_client"
version = "0.1.3"
authors = ["65502847 <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
url = "2.2.0"
native-tls = "0.2.7"
crossbeam = "0.8.0"
reqwest = { version = "0.10.10", features = ["blocking"] }
json = "0.12.4"
tokio = { version = "1.0.1", features = ["full"] }
tungstenite = { version = "0.11.1", features = ["tls"] }
